# c8

./: .dockerignore  CMakeLists.txt  PROJECT.txt  README.md  dockerfile
.github/workflows/: build.yml
cmake/: getLatestGitTag.cmake  getLatestStableGitTag.cmake
cmake/repo/: v8.cmake
cpp/: main.cpp
include/: c8.h
include/c8/: c8-internal.h  crash_reporting.h  globals.h  logging.h  platform_check.h  str.h  sys.h
sh/: build-v8.sh  get-latest-stable-git-tag.sh
source/: CMakeLists.txt
source/cpp/: crash_reporting.cpp  globals.cpp  logging.cpp  main.cpp  platform_check.cpp  sys.cpp
test/: CMakeLists.txt
test/test-001/: CMakeLists.txt  main.cpp
test/test-002/: CMakeLists.txt  main.cpp
test/test-003/: CMakeLists.txt  main.cpp
test/test-004/: CMakeLists.txt  main.cpp
